--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,4 @@
 mountpoints:
-  /: https://adobe-my.sharepoint.com/:f:/p/asaar/Eh7-2AA0sa1Jpf7OLDsfc2YBjQPOruHS_fUGLJL_taSoYw?email=helix%40adobe.com&e=7f3ziP
+  /:
+    url: https://content.da.live/alexsaar/random-thoughts/
+    type: markup
